# ride-secure

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
config/: application.yml
database/schema/: init.sql
java/: README-JavaFX.md  build.bat  buildfx.bat  cleanup.bat  pom.xml  run.bat  runfx.bat
java/backup/: DetectionResult.java  RideSecureApp.java
java/backup/controller/: MainController.java
java/backup/resources/css/: styles.css
java/backup/resources/fxml/: main-view.fxml
java/backup/service/: DatabaseService.java  VideoService.java
java/src/main/java/com/ridesecure/: LandingPageController.java  RideSecureFXApp.java  RideSecureFXController.java  RideSecureSwingApp.java
java/src/main/java/com/ridesecure/config/: EnvConfig.java
java/src/main/java/com/ridesecure/model/: Violation.java
java/src/main/java/com/ridesecure/service/: DatabaseService.java
java/src/main/resources/css/: landing.css  styles.css
java/src/main/resources/fxml/: LandingPage.fxml  RideSecureMain.fxml
output/: .keep
python/: README.md  pyproject.toml  setup_ml.py  test_helmet_detection.py  test_plate_detection.py  test_setup.py
python/src/: detect_helmets.py
python/src/ridesecure/: __init__.py
python/src/ridesecure/api/: __init__.py  detection_api.py
python/src/ridesecure/detection/: __init__.py  detection_service.py  helmet_detector.py  plate_detector.py
python/tests/: __init__.py  test_detection.py
