[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-sort-realtime>=1.3.2",
    "easyocr>=1.7.2",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.206",
]
